# zoa.sh

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/mods/: agent.rs  cache.rs  dynamic.rs  mod.rs  net.rs  projects.rs  state.rs  text.rs
static/css/: styles.css
static/js/: open_image.js  show_more_projects.js  title_animation.js
templates/: index.html.hbs  main_content.html.hbs
