[package]
name = "zoa-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rand = "0.8.5"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"]}
serde = { version = "1.0.204", features = ["derive"] }
css-minify = "0.3.1"
scraper = "0.20.0"
handlebars = "6.0.0"
csscolorparser = "0.7.0"
regex = "1.10.6"
